force-app/main/default/objects/Contact/fields/Onco_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Onco_Recommendation__c</fullName>
    <label>Recommendation</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>