force-app/main/default/objects/Contact/fields/Onco_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>Onco_RecordTypeName__c</fullName>
    <formula>IF (ISNULL (AccountId), &apos;&apos;,  Account.RecordType.Name )</formula>
    <label>RecordTypeName</label>
    <type>Text</type>
</CustomField>