force-app/main/default/objects/Contact/fields/Onco_Total_Review__c.field-meta.xml
<CustomField>
    <fullName>Onco_Total_Review__c</fullName>
    <label>Total Review</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>